iac/aws/eks/elb/alb-ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:195725532069:certificate/b6a9e691-b807-4f10-a0bf-0449730ecdf4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # External DNS - For creating a Record Set in Route53
    #external-dns.alpha.kubernetes.io/hostname: grafana.acloudtiger.com
  labels:
    app: grafana
  name: grafana
  namespace: grafana
spec:
  rules:
  - host: grafana.acloudtiger.com
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: Prefix
      - backend:
          service:
           name: grafana
           port: 
             number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
           name: grafana
           port: 
             number: 80
        path: /*
        pathType: Prefix
